<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical" >

    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/color_theme"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_username_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_username"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/et_pwd_again"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_pwd_selector"
        android:drawablePadding="16dp"
        android:hint="@string/hint_pwd_again"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textSize="@dimen/text_middle_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#cccccc" />


    <Button
        android:id="@+id/reg_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/register"
        android:textSize="@dimen/text_large_size"
        android:textColor="#ffffff" />

</LinearLayout>